--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
+
     "ts-loader": "^8.0.10",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.5",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
